--- a/week3/index.html
+++ b/week3/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<h1>This is Nathaniel Masotes</h1>
+<h2>At your service...</h2>
+<h3>Send me a dm my senpai</h3>
+<p>HAHHAHAHAHA.</p>
 
 </body>
 </html>
