--- a/week3/index.html
+++ b/week3/index.html
@@ -2,10 +2,8 @@
 <html>
 <body>
 
-<h1>This is Nathaniel Masotes</h1>
-<h2>At your service...</h2>
-<h3>Send me a dm my senpai</h3>
-<p>HAHHAHAHAHA.</p>
+<h1>Hi i'm Nath btw</h1>
+<p>My gcash number - 09496723641.</p>
 
 </body>
 </html>
