--- a/week3/index.html
+++ b/week3/index.html
@@ -2,8 +2,10 @@
 <html>
 <body>
 
-<h1>Hi i'm Nath btw</h1>
+<h1>Hi i'm Nath,Merry Christmas!</h1>
 <p>My gcash number - 09496723641.</p>
+
+<img src="MicrosoftTeams-image (1).png" width="500" height="600">
 
 </body>
 </html>
