--- a/week3/index.html
+++ b/week3/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 
+<!-- So this is me swallowin' my pride
+Standin' in front of you sayin' I'm sorry for that night
+And I go back to December all the time -->
 <h1>Hi i'm Nath,Merry Christmas!</h1>
 <p>My gcash number - 09496723641.</p>
 
