--- a/week3/index.html
+++ b/week3/index.html
@@ -8,6 +8,13 @@ And I go back to December all the time -->
 <h1>Hi i'm Nath,Merry Christmas!</h1>
 <p>My gcash number - 09496723641.</p>
 
+<h2>Look</h2>
+<h3>Ma</h3>
+<h4>I</h4>
+<h5>Made</h5>
+<h6>it</h6>
+
+
 <img src="MicrosoftTeams-image (1).png" width="500" height="600">
 
 </body>
