--- a/week3/index.html
+++ b/week3/index.html
@@ -6,7 +6,7 @@
 Standin' in front of you sayin' I'm sorry for that night
 And I go back to December all the time -->
 <h1>Hi i'm Nath,Merry Christmas!</h1>
-<p>My gcash number - 09496723641.</p>
+<p>My gcash number - <br> 09496723641.</p>
 
 <h2>Look</h2>
 <h3>Ma</h3>
