My Personal Website

--- a/week3/index.html
+++ b/week3/index.html
@@ -2,20 +2,101 @@
 <html>
 <body>
 
-<!-- So this is me swallowin' my pride
-Standin' in front of you sayin' I'm sorry for that night
-And I go back to December all the time -->
-<h1>Hi i'm Nath,Merry Christmas!</h1>
-<p>My gcash number - <br> 09496723641.</p>
+<body style="background-color:#F3F3F3;">
+<style>
+* {
+  box-sizing: border-box;
+}
 
-<h2>Look</h2>
-<h3>Ma</h3>
-<h4>I</h4>
-<h5>Made</h5>
-<h6>it</h6>
+.column {
+  float: left;
+  width: 9.33%;
+  padding: 10px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+p {
+  font-size: 14px;
+}
 
 
-<img src="MicrosoftTeams-image (1).png" width="500" height="600">
+
+<style>
+h3 {text-align: center}
+h2 {text-align: center}
+p {text-align: center}
+</style>
+<br>
+<p><b>Hola, I'm Nath!</b></p>
+
+<img src="Untitled design (10).png" alt="profile pic" width="100" height="200" class="center">
+
+<br>
+
+<style>
+
+</style>
+<p><br><br>Currently studying at Asia Pacific College, 2nd year BSIT student. I have different hobbies from playing 
+<br> instruments (piano and guitar),watching sports (basketball, tennis, and football), <br>reading books (novels, sci-fi, and coming of age), 
+and video games <br>(FPS, MOBA, and MMORPG) 
+depending on my<br> mood on which I feel I want to do.
+
+<br> 
+<br>
+<br>
+<br>
+
+<p><em>"Boring sometimes, interesting at  most."</em></p>
+<br>
+<br>
+<br>
+<p><b>MY SOCIALS</b></p>
+
+
+
+<div class="row">
+	<style>
+	.center {
+	  display: block;
+	  top: 50%;
+	  left: 50%
+	  margin-top: -100px;
+	  margin-left: 540px;
+	  width: 25%;
+	  height: 50%
+	  position: fixed;
+	}
+	</style>
+  <div class="column">
+    <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook.png" alt="facebook" 
+	style="width:40px;height:40px;" class="center"></a>
+  </div>
+  <div class="column">
+    <a href="https://github.com/nrmasotes"><img src="github.png" alt="facebook" 
+	style="width:40px;height:40px;" class="center"></a>
+  </div>
+  <div class="column">
+    <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="Black-linkedin-logo-design-on-transparent-background-PNG-removebg-preview.png" alt="linkedin" 
+	style="width:40px;height:40px;" class="center"></a>
+  </div>
+</div>
+
+
+
 
 </body>
 </html>
