--- a/week3/index.html
+++ b/week3/index.html
@@ -2,77 +2,8 @@
 <html>
 <body>
 
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-</style>
-</head>
-
-<body>
-<body style="background-color:#F3F3F3;">
-<style>
-
-h1 {
-  font-size: 20px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-p {
-  font-size: 14px;
-}
-
-
-
-<style>
-h3 {text-align: center}
-h2 {text-align: center}
-p {text-align: center}
-</style>
-<p><b>Hola, I'm Nath!</b></p>
-
-<img src="pfp.jpg" alt="profile pic" width= 25% height= 25% class="center">
-
-
-<p><br>Currently studying at Asia Pacific College, 2nd year BSIT student. I have different hobbies from playing 
-<br> instruments (piano and guitar),watching sports (basketball, tennis, and football), <br>reading books (novels, sci-fi, and coming of age), 
-and video games <br>(FPS, MOBA, and MMORPG) 
-depending on my<br> mood on which I feel I want to do.
-
-<br> 
-
-
-<p><em>"Boring sometimes, interesting at  most."</em></p>
-<p><b>MY SOCIALS</b></p>
-
-
-
-<div class="row">
-  <div class="column">
-    <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook.png" alt="facebook" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
-  <div class="column">
-	<br>
-    <a href="https://github.com/nrmasotes"><img src="github.png" alt="facebook" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
-  <div class="column">
-	<br>
-    <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="Black-linkedin-logo-design-on-transparent-background-PNG-removebg-preview.png" alt="linkedin" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
-</div>
-
-
-
+<h1 style="color:blue;text-align:center;">This is a heading</h1>
+<p style="color:red; text-align:center;">This is a paragraph.</p>
 
 </body>
 </html>
