--- a/week3/index.html
+++ b/week3/index.html
@@ -2,8 +2,17 @@
 <html>
 <body>
 
-<h1 style="color:blue;text-align:center;">This is a heading</h1>
-<p style="color:red; text-align:center;">This is a paragraph.</p>
+<p>This text is normal.</p>
+<p><strong>This text is important!</strong></p>
+<p><i>This text is italic.</i></p>
+<p><em>This text is emphasized.</em></p>
+<p>Do not forget to buy <mark>milk</mark> today.</p>
+<p>My favorite color is <del>blue</del> red.</p>
+<p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
+<p>This is <sub>subscripted</sub> text.</p>
+<p>This is <sup>superscripted</sup> text.</p>
+
+
 
 </body>
 </html>
