--- a/week3/index.html
+++ b/week3/index.html
@@ -2,17 +2,33 @@
 <html>
 <body>
 
-<p>This text is normal.</p>
-<p><strong>This text is important!</strong></p>
-<p><i>This text is italic.</i></p>
-<p><em>This text is emphasized.</em></p>
-<p>Do not forget to buy <mark>milk</mark> today.</p>
-<p>My favorite color is <del>blue</del> red.</p>
-<p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
-<p>This is <sub>subscripted</sub> text.</p>
-<p>This is <sup>superscripted</sup> text.</p>
+<p>Here is a quote from WWF's website:</p>
 
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+</blockquote>
 
+<p>Browsers usually insert quotation marks around the q element.</p>
+
+<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+
+<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+
+<p>Marking up abbreviations can give useful information to browsers, translation systems and search-engines.</p>
+
+<p>The HTML address element defines contact information (author/owner) of a document or article.</p>
+
+<address>
+Written by John Doe.<br> 
+Visit us at:<br>
+Example.com<br>
+Box 564, Disneyland<br>
+USA
+</address>
+
+<p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+
+<bdo dir="rtl">This text will be written from right to left</bdo>
 
 </body>
 </html>
