--- a/week3/index.html
+++ b/week3/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-h1 {
-  color: blue;
-  font-family: verdana;
-  font-size: 300%;
-}
-p {
-  color: red;
-  font-family: courier;
-  font-size: 160%;
-}
-</style>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
 
-<h1>This is a heading</h1>
+<h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
 </body>
