Lesson 2.7 - Block & Inline

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My Page Title</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-</head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>The span element</h1>
+
+<p>My mother has <span style="color:blue;font-weight:bold;">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold;">dark green</span> eyes.</p>
 
 </body>
 </html>
