--- a/week3/index.html
+++ b/week3/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+.city {
+  background-color: tomato;
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+</style>
+</head>
 <body>
 
-<h1>The span element</h1>
+<div class="city">
+  <h2>London</h2>
+  <p>London is the capital of England.</p>
+</div>
 
-<p>My mother has <span style="color:blue;font-weight:bold;">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold;">dark green</span> eyes.</p>
+<div class="city">
+  <h2>Paris</h2>
+  <p>Paris is the capital of France.</p>
+</div>
+
+<div class="city">
+  <h2>Tokyo</h2>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
 
 </body>
 </html>
