--- a/week3/index.html
+++ b/week3/index.html
@@ -1,41 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-.all-browsers {
-  margin: 0;
-  padding: 5px;
-  background-color: lightgray;
-}
-
-.all-browsers > h1, .browser {
-  margin: 10px;
-  padding: 5px;
-}
-
-.browser {
-  background: white;
-}
-
-.browser > h2, p {
-  margin: 4px;
-  font-size: 90%;
-}
-</style>
-</head>
 <body>
 
-<h1>Famous Cities</h1>
+<h1>HTML Entity Example</h1>
 
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan, the center of the Greater Tokyo Area, and the most populous metropolitan area in the world.</p>
-
-<h2>London</h2>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom.</p>
-
-<h2>Paris</h2>
-<p>Paris is the capital of France. The Paris area is one of the largest population centers in Europe.</p>
+<h2>A space character: &nbsp;</h2>
 
 </body>
 </html>
-
