--- a/week3/index.html
+++ b/week3/index.html
@@ -4,7 +4,8 @@
 
 <h1>HTML Entity Example</h1>
 
-<h2>The registered symbol: &reg;</h2>
+<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+
 
 </body>
 </html>
