--- a/week3/index.html
+++ b/week3/index.html
@@ -2,9 +2,7 @@
 <html>
 <body>
 
-<h1>HTML Entity Example</h1>
-
-<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+scheme://prefix.domain:port/path/lab2
 
 
 </body>
