--- a/week3/index.html
+++ b/week3/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-color: lightblue;
+  background-color: red;
 }
 
 h1 {
@@ -12,7 +12,7 @@ h1 {
 }
 
 p {
-  font-family: verdana;
+  font-family: arial;
   font-size: 20px;
 }
 </style>
