--- a/week3/index.html
+++ b/week3/index.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <style>
-body {
-  background-color: linen;
-}
-
-h1 {
-  color: maroon;
-  margin-left: 40px;
+p {
+  color: red; /* Set text color to red */
 }
 </style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h2>My Heading</h2>
+
+<!-- These paragraphs will be red -->
+<p>Hello World!</p>
+<p>This paragraph is styled with CSS.</p>
+<p>CSS comments are not shown in the output.</p>
 
 </body>
 </html>
