--- a/week3/index.html
+++ b/week3/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-p {
-  color: red; /* Set text color to red */
-}
-</style>
-</head>
 <body>
 
-<h2>My Heading</h2>
+<h1 style="background-color:DodgerBlue;">Hello World</h1>
 
-<!-- These paragraphs will be red -->
-<p>Hello World!</p>
-<p>This paragraph is styled with CSS.</p>
-<p>CSS comments are not shown in the output.</p>
+<p style="background-color:Tomato;">
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+</p>
 
 </body>
 </html>
+
+
