--- a/week3/index.html
+++ b/week3/index.html
@@ -2,18 +2,15 @@
 <html>
 <body>
 
-<h1>Shades of gray</h1>
+<h1>Specify colors using HEX values</h1>
 
-<p>By using equal values for red, green, and blue, you will get different shades of gray:</p>
-
-<h2 style="background-color:rgb(60, 60, 60);">rgb(60, 60, 60)</h2>
-<h2 style="background-color:rgb(90, 90, 90);">rgb(90, 90, 90)</h2>
-<h2 style="background-color:rgb(120, 120, 120);">rgb(120, 120, 120)</h2>
-<h2 style="background-color:rgb(180, 180, 180);">rgb(180, 180, 180)</h2>
-<h2 style="background-color:rgb(210, 210, 210);">rgb(210, 210, 210)</h2>
-<h2 style="background-color:rgb(240, 240, 240);">rgb(240, 240, 240)</h2>
+<h2 style="background-color:#ff0000;">#ff0000</h2>
+<h2 style="background-color:#0000ff;">#0000ff</h2>
+<h2 style="background-color:#3cb371;">#3cb371</h2>
+<h2 style="background-color:#ee82ee;">#ee82ee</h2>
+<h2 style="background-color:#ffa500;">#ffa500</h2>
+<h2 style="background-color:#6a5acd;">#6a5acd</h2>
 
 </body>
 </html>
-
 
