--- a/week3/index.html
+++ b/week3/index.html
@@ -2,15 +2,16 @@
 <html>
 <body>
 
-<h1>Specify colors using HEX values</h1>
+<h1>Specify colors using HSL values</h1>
 
-<h2 style="background-color:#ff0000;">#ff0000</h2>
-<h2 style="background-color:#0000ff;">#0000ff</h2>
-<h2 style="background-color:#3cb371;">#3cb371</h2>
-<h2 style="background-color:#ee82ee;">#ee82ee</h2>
-<h2 style="background-color:#ffa500;">#ffa500</h2>
-<h2 style="background-color:#6a5acd;">#6a5acd</h2>
+<h2 style="background-color:hsl(0, 100%, 50%);">hsl(0, 100%, 50%)</h2>
+<h2 style="background-color:hsl(240, 100%, 50%);">hsl(240, 100%, 50%)</h2>
+<h2 style="background-color:hsl(147, 50%, 47%);">hsl(147, 50%, 47%)</h2>
+<h2 style="background-color:hsl(300, 76%, 72%);">hsl(300, 76%, 72%)</h2>
+<h2 style="background-color:hsl(39, 100%, 50%);">hsl(39, 100%, 50%)</h2>
+<h2 style="background-color:hsl(248, 53%, 58%);">hsl(248, 53%, 58%)</h2>
 
 </body>
 </html>
+
 
