--- a/week3/index.html
+++ b/week3/index.html
@@ -1,88 +1,30 @@
 <!DOCTYPE html>
 <html>
-<body>
-
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-</style>
-</head>
-
-<body>
-<body style="background-color:#F3F3F3;">
-<style>
-
 h1 {
-  font-size: 40px;
-  text-align:center
+  background-color: green;
 }
 
-h2 {
-  font-size: 20px;
+div {
+  background-color: lightblue;
 }
 
 p {
-  font-size: 14px;
+  background-color: yellow;
 }
-
-h1 {font-family: 'Brush Script MT', cursive;
-}
-
-h2 {font-family: 'Brush Script MT', cursive;
-}
-
-p {font-family: 'Courier New', monospace;
-}
-h2 {font-family: 'Courier New', monospace;
-}
-p.groove {border-style: groove;}
-
-<style>
-h3 {text-align: center}
-h2 {text-align: center}
-p {text-align: center}
 </style>
-<h1><b>Hola, I'm Nath!</b></h1>
+</head>
+<body>
 
-<img src="pfp.jpg" alt="profile pic" width= 25% height= 25% class="center">
-
-
-<p class="groove"><br>Currently studying at Asia Pacific College, 2nd year BSIT student. I have different hobbies from playing 
-<br> instruments (piano and guitar),watching sports (basketball, tennis, and football), <br>reading books (novels, sci-fi, and coming of age), 
-and video games <br>(FPS, MOBA, and MMORPG) 
-depending on my<br> mood on which I feel I want to do.
-
-<br> 
-
-<p><em>"Boring sometimes, interesting at  most."</em></p>
-<h2 class="groove"><b>MY SOCIALS</b></h2>
-
-
-
-<div class="row">
-  <div class="column">
-    <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook.png" alt="facebook" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
-  <div class="column">
-	<br>
-    <a href="https://github.com/nrmasotes"><img src="github.png" alt="facebook" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
-  <div class="column">
-	<br>
-    <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="Black-linkedin-logo-design-on-transparent-background-PNG-removebg-preview.png" alt="linkedin" 
-	style="width:30px;height:30px;" class="center"></a>
-  </div>
+<h1>CSS background-color example!</h1>
+<div>
+This is a text inside a div element.
+<p>This paragraph has its own background color.</p>
+We are still in the div element.
 </div>
-<p class="background-color:#E6E6E9;">© NATHANIEL MASOTES 2022</h2>
-
-
 
 </body>
 </html>
+
+
