--- a/week3/index.html
+++ b/week3/index.html
@@ -2,27 +2,16 @@
 <html>
 <head>
 <style>
-h1 {
-  background-color: green;
-}
-
-div {
-  background-color: lightblue;
-}
-
-p {
-  background-color: yellow;
+body {
+  background-image: url("github.png");
 }
 </style>
 </head>
 <body>
 
-<h1>CSS background-color example!</h1>
-<div>
-This is a text inside a div element.
-<p>This paragraph has its own background color.</p>
-We are still in the div element.
-</div>
+<h1>Hello World!</h1>
+
+<p>This page has an image as the background!</p>
 
 </body>
 </html>
