CSS Lesson 3.3 - Background Repeat

--- a/week3/index.html
+++ b/week3/index.html
@@ -3,15 +3,16 @@
 <head>
 <style>
 body {
-  background-image: url("github.png");
+  background-image: url("pfp.jpg");
+  background-repeat: no-repeat;
 }
 </style>
 </head>
 <body>
 
 <h1>Hello World!</h1>
-
-<p>This page has an image as the background!</p>
+<p>W3Schools background image example.</p>
+<p>The background image only shows once, but it is disturbing the reader!</p>
 
 </body>
 </html>
