--- a/week3/index.html
+++ b/week3/index.html
@@ -5,14 +5,41 @@
 body {
   background-image: url("pfp.jpg");
   background-repeat: no-repeat;
+  background-position: right top;
+  margin-right: 200px;
+  background-attachment: scroll;
 }
 </style>
 </head>
 <body>
 
-<h1>Hello World!</h1>
-<p>W3Schools background image example.</p>
-<p>The background image only shows once, but it is disturbing the reader!</p>
+<h1>The background-attachment Property</h1>
+
+<p>The background-attachment property specifies whether the background image should scroll or be fixed (will not scroll with the rest of the page).</p>
+
+<p><strong>Tip:</strong> If you do not see any scrollbars, try to resize the browser window.</p>
+
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
+<p>The background-image scrolls. Try to scroll down the page.</p>
 
 </body>
 </html>
