--- a/week3/index.html
+++ b/week3/index.html
@@ -2,51 +2,37 @@
 <html>
 <head>
 <style>
-p.one {
-  border-style: solid;
-  border-width: 5px;
+body {
+  text-align: center;
 }
-
-p.two {
-  border-style: solid;
-  border-width: medium;
-}
-
-p.three {
-  border-style: dotted;
-  border-width: 2px;
-}
-
+/* Four values */
 p.four {
+  border-style: dotted solid double dashed;
+}
+
+/* Three values */
+p.three {
+  border-style: dotted solid double;
+}
+
+/* Two values */
+p.two {
+  border-style: dotted solid;
+}
+
+/* One value */
+p.one {
   border-style: dotted;
-  border-width: thick;
-}
-
-p.five {
-  border-style: double;
-  border-width: 15px;
-}
-
-p.six {
-  border-style: double;
-  border-width: thick;
 }
 </style>
 </head>
 <body>
 
-<h2>The border-width Property</h2>
-<p>This property specifies the width of the four borders:</p>
-
-<p class="one">Some text.</p>
-<p class="two">Some text.</p>
-<p class="three">Some text.</p>
-<p class="four">Some text.</p>
-<p class="five">Some text.</p>
-<p class="six">Some text.</p>
-
-<p><b>Note:</b> The "border-width" property does not work if it is used alone. 
-Always specify the "border-style" property to set the borders first.</p>
+<h2>Individual Border Sides</h2>
+<p class="four">4 different border styles.</p>
+<p class="three">3 different border styles.</p>
+<p class="two">2 different border styles.</p>
+<p class="one">1 border style.</p>
 
 </body>
 </html>
