CSS Lesson 4.3 - Border Color

--- a/week3/index.html
+++ b/week3/index.html
@@ -2,37 +2,30 @@
 <html>
 <head>
 <style>
-body {
-  text-align: center;
-}
-/* Four values */
-p.four {
-  border-style: dotted solid double dashed;
-}
-
-/* Three values */
-p.three {
-  border-style: dotted solid double;
-}
-
-/* Two values */
-p.two {
-  border-style: dotted solid;
-}
-
-/* One value */
 p.one {
-  border-style: dotted;
+  border-style: solid;
+  border-color: hsl(0, 100%, 50%); /* red */
+}
+
+p.two {
+  border-style: solid;
+  border-color: hsl(240, 100%, 50%); /* blue */
+}
+
+p.three {
+  border-style: solid;
+  border-color: hsl(0, 0%, 73%); /* grey */
 }
 </style>
 </head>
 <body>
 
-<h2>Individual Border Sides</h2>
-<p class="four">4 different border styles.</p>
-<p class="three">3 different border styles.</p>
-<p class="two">2 different border styles.</p>
-<p class="one">1 border style.</p>
+<h2>The border-color Property</h2>
+<p>The color of the border can also be specified using HSL values:</p>
+
+<p class="one">A solid red border</p>
+<p class="two">A solid blue border</p>
+<p class="three">A solid grey border</p>
 
 </body>
 </html>
