--- a/week3/index.html
+++ b/week3/index.html
@@ -2,32 +2,17 @@
 <html>
 <head>
 <style>
-p.one {
-  border-style: solid;
-  border-color: hsl(0, 100%, 50%); /* red */
-}
-
-p.two {
-  border-style: solid;
-  border-color: hsl(240, 100%, 50%); /* blue */
-}
-
-p.three {
-  border-style: solid;
-  border-color: hsl(0, 0%, 73%); /* grey */
+p {
+  border-bottom: 6px solid red;
+  background-color: lightgrey;
 }
 </style>
 </head>
 <body>
 
-<h2>The border-color Property</h2>
-<p>The color of the border can also be specified using HSL values:</p>
-
-<p class="one">A solid red border</p>
-<p class="two">A solid blue border</p>
-<p class="three">A solid grey border</p>
+<h2>The border-bottom Property</h2>
+<p>This property is a shorthand property for border-bottom-width, border-bottom-style, and border-bottom-color.</p>
 
 </body>
 </html>
-
 
