--- a/week3/index.html
+++ b/week3/index.html
@@ -2,17 +2,41 @@
 <html>
 <head>
 <style>
-p {
-  border-bottom: 6px solid red;
-  background-color: lightgrey;
+p.normal {
+  border: 2px solid red;
+  padding: 5px;
+}
+
+p.round1 {
+  border: 2px solid red;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+p.round2 {
+  border: 2px solid red;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+p.round3 {
+  border: 2px solid red;
+  border-radius: 12px;
+  padding: 5px;
 }
 </style>
 </head>
 <body>
 
-<h2>The border-bottom Property</h2>
-<p>This property is a shorthand property for border-bottom-width, border-bottom-style, and border-bottom-color.</p>
+<h2>The border-radius Property</h2>
+<p>This property is used to add rounded borders to an element:</p>
+
+<p class="normal">Normal border</p>
+<p class="round1">Round border</p>
+<p class="round2">Rounder border</p>
+<p class="round3">Roundest border</p>
 
 </body>
 </html>
+
 
