--- a/week3/index.html
+++ b/week3/index.html
@@ -2,21 +2,28 @@
 <html>
 <head>
 <style>
-h1 {
-  margin: 0 0 50px 0;
+div.ex1 {
+  width: 300px;
+  background-color: yellow;
 }
 
-h2 {
-  margin: 20px 0 0 0;
+div.ex2 {
+  width: 300px;
+  padding: 25px;
+  box-sizing: border-box;
+  background-color: lightblue;
 }
 </style>
 </head>
 <body>
 
-<p>In this example the h1 element has a bottom margin of 50px and the h2 element has a top margin of 20px. So, the vertical margin between h1 and h2 should have been 70px (50px + 20px). However, due to margin collapse, the actual margin ends up being 50px.</p>
+<h2>Padding and element width - with box-sizing</h2>
 
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
+<div class="ex1">This div is 300px wide.</div>
+<br>
+
+<div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property.
+</div>
 
 </body>
 </html>
