--- a/week3/index.html
+++ b/week3/index.html
@@ -2,28 +2,20 @@
 <html>
 <head>
 <style>
-div.ex1 {
-  width: 300px;
-  background-color: yellow;
-}
-
-div.ex2 {
-  width: 300px;
-  padding: 25px;
-  box-sizing: border-box;
-  background-color: lightblue;
+div {
+  max-width: 500px;
+  height: 100px;
+  background-color: powderblue;
 }
 </style>
 </head>
 <body>
 
-<h2>Padding and element width - with box-sizing</h2>
+<h2>Set the max-width of an element</h2>
 
-<div class="ex1">This div is 300px wide.</div>
-<br>
+<div>This div element has a height of 100px and a max-width of 500px.</div>
 
-<div class="ex2">The width of this div remains at 300px, in spite of the 50px of total left and right padding, because of the box-sizing: border-box property.
-</div>
+<p>Resize the browser window to see the effect.</p>
 
 </body>
 </html>
