--- a/week3/index.html
+++ b/week3/index.html
@@ -2,20 +2,30 @@
 <html>
 <head>
 <style>
-div {
+div.ex1 {
+  width: 500px;
+  margin: auto;
+  border: 3px solid #73AD21;
+}
+
+div.ex2 {
   max-width: 500px;
-  height: 100px;
-  background-color: powderblue;
+  margin: auto;
+  border: 3px solid #73AD21;
 }
 </style>
 </head>
 <body>
 
-<h2>Set the max-width of an element</h2>
+<h2>CSS Max-width</h2>
 
-<div>This div element has a height of 100px and a max-width of 500px.</div>
+<div class="ex1">This div element has width: 500px;</div>
+<br>
 
-<p>Resize the browser window to see the effect.</p>
+<div class="ex2">This div element has max-width: 500px;</div>
+
+<p><strong>Tip:</strong> Drag the browser window to smaller than 500px wide, to see the difference between 
+the two divs!</p>
 
 </body>
 </html>
