CSS Lesson 6.4 - Box Model

--- a/week3/index.html
+++ b/week3/index.html
@@ -2,30 +2,20 @@
 <html>
 <head>
 <style>
-div.ex1 {
-  width: 500px;
-  margin: auto;
-  border: 3px solid #73AD21;
-}
-
-div.ex2 {
-  max-width: 500px;
-  margin: auto;
-  border: 3px solid #73AD21;
+div {
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
 }
 </style>
 </head>
 <body>
 
-<h2>CSS Max-width</h2>
+<h2>Calculate the total width:</h2>
 
-<div class="ex1">This div element has width: 500px;</div>
-<br>
-
-<div class="ex2">This div element has max-width: 500px;</div>
-
-<p><strong>Tip:</strong> Drag the browser window to smaller than 500px wide, to see the difference between 
-the two divs!</p>
+<img src="pfp.jpg" width="350" height="263" alt="Klematis">
+<div>The picture above is 350px wide. The total width of this element is also 350px.</div>
 
 </body>
 </html>
