My Personal Website v.4

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,23 +1,138 @@
 <!DOCTYPE html>
 <html>
+<body>
+
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-div {
-  width: 320px;
-  padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+body {
+	background-image: url("Razer_x_Trover_1920_x_1080.png");
+ }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+body {margin:0;}
+
+.topnav {
+  overflow: auto;
+  background-color: #140101;
+  width: 100%;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: 'Courier New', monospace;
+  border-bottom: 3px solid transparent;
+}
+
+.topnav b {
+  float: right;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: 'Courier New', monospace;
+  border-bottom: 3px solid transparent;
+}
+.topnav a:hover {
+  border-bottom: 3px solid violet;
+}
+
+.topnav a.active {
+  border-bottom: 3px solid violet;
 }
 </style>
 </head>
 <body>
 
-<h2>Calculate the total width:</h2>
+<div class="topnav">
+  <a class="active" href="#home">About Me</a>
+  <a href="#news">My Portfolio</a>
+  <a href="#contact">Contact</a>
+  
 
-<img src="pfp.jpg" width="350" height="263" alt="Klematis">
-<div>The picture above is 350px wide. The total width of this element is also 350px.</div>
+  <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook2.png" alt="facebook" 
+	style="width:20px;height:20px;"></a>
+  <a href="https://github.com/nrmasotes"><img src="githubby3.png" alt="facebook" 
+	style="width:20px;height:20px;"></a>
+  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="linkedin2.png" alt="linkedin" 
+	style="width:20px;height:20px;"></a>
+</div>
+
+<div style="padding-left:16px">
+</div>
+
+
+
+</style>
+</head>
+
+
+<style>
+
+
+h1 {
+  font-size: 40px;
+  color: white;
+  text-align:center
+}
+
+h2 {
+  font-size: 20px;
+  color: white;
+}
+
+p {
+  font-size: 14px;
+  color: white;
+}
+
+h1 {font-family: 'Brush Script MT', cursive;
+}
+
+h2 {font-family: 'Brush Script MT', cursive;
+}
+
+p {font-family: 'Courier New', monospace;
+}
+h2 {font-family: 'Courier New', monospace;
+}
+p.groove {border-style: groove;}
+
+<style>
+h3 {text-align: center}
+h2 {text-align: center}
+p {text-align: center}
+</style>
+<h1><b>Hola, I'm Nath!</b></h1>
+
+<img src="pfp.jpg" alt="profile pic" width= 25% height= 25% class="center">
+
+
+<p class="groove"><br>Currently studying at Asia Pacific College, 2nd year BSIT student. I have different hobbies from playing 
+<br> instruments (piano and guitar),watching sports (basketball, tennis, and football), <br>reading books (novels, sci-fi, and coming of age), 
+and video games <br>(FPS, MOBA, and MMORPG) 
+depending on my<br> mood on which I feel I want to do.
+
+<br> 
+
+<p><em>"Boring sometimes, interesting at  most."</em></p>
+
+
+
+<p class="background-color:#E6E6E9;">© NATHANIEL MASOTES 2022</h2>
+
+
 
 </body>
 </html>
-
-
