--- a/week5/index.html
+++ b/week5/index.html
@@ -21,6 +21,13 @@
 	  <a class="active" href="#home">About Me</a>
 	  <a href="#news">My Portfolio</a>
 	  <a href="resource.html">Resources</a>
+
+	  <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook2.png" alt="facebook" 
+		style="width:20px;height:20px;"></a>
+	  <a href="https://github.com/nrmasotes"><img src="githubby3.png" alt="facebook" 
+		style="width:20px;height:20px;"></a>
+	  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="linkedin2.png" alt="linkedin" 
+		style="width:20px;height:20px;"></a>
 	</div>
 
 	<div style="padding-left:16px">
@@ -35,10 +42,11 @@
     <div class="row">
       <div class="column1">   
         
-      <p>
+     
 	
-      Hi there! I am <b>Nathaniel Masotes</b>, currently studying at <b>Asia Pacific College</b>, 2nd year <b>BSIT student</b>. <br><br>
-	  I have different hobbies from playing instruments like piano and guitar, <br> 
+      <h3>Hi there!</h3>
+	  <p>I am <b>Nathaniel Masotes</b>, currently studying at <b>Asia Pacific College</b>, 2nd year <b>BSIT student</b>. <br><br>
+	  <br>I have different hobbies from playing instruments like piano and guitar, <br> 
 	  watching sports  reading books, and video games depending on my mood on which I feel I want to do.
 
 	  <br>
@@ -47,24 +55,16 @@
 	  <br>
 	  <br>
       </p>
-	  <h3>CONTACT ME:</h3>
 		</div>
 		<div class="pfp">
 			<img src="pfp.jpg" 
 			alt="profile pic" width="400" height="300"  style="width: 400px; 
 			margin-left: 20px; position: relative; border-radius: 5%;" >
 		</div> 
-	</div>
-	<div class="Contacts">
-		<a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook2.png" alt="facebook" 
-			style="width:50px;height:50px; margin-left: 10px; position: relative; border-radius: 2%;"></a>
-		  <a href="https://github.com/nrmasotes"><img src="githubby3.png" alt="facebook" 
-			style="width:50px;height:50px; margin-left: 10px; position: relative; border-radius: 2%;"></a>
-		  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="linkedin2.png" alt="linkedin" 
-			style="width:50px;height:50px; margin-left: 10px; position: relative; border-radius: 2%;"></a>
-	</div>
 	<br>
 		<div class="header">
+			<br>
+			<br>
 			<h2>MY PREVIOUS PROJECTS</h2>
 		</div>
 	</div>
