My Personal Website v.7

--- a/week5/index.html
+++ b/week5/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="mystyle.css">
-	</head>
-	
-	<style>
-	body {
-		background-color: #E8E9EB;
-
-	 }
-
-	body {margin: 0px;}
-
-	</style>
-	</head>
+	<link rel="shortcut icon" type="image/png" href="img/NHM.png">
+    <title>nrmasotes</title>
+</head>
+<body>
+	<main>
 	<div class="topnav">
-	  <a class="active" href="#home">About Me</a>
-	  <a href="#news">My Portfolio</a>
+	  <a class="active" href="#Aboutme">About Me</a>
+	  <a href="#MyPortfolio">My Portfolio</a>
 	  <a href="resource.html">Resources</a>
+	  <li style="float:right"><a  href="#Home">
+		<img src="nhm (3).png" width="25px" height="25px" overflow="hidden" margin-top="-6px" margin-right="10px"></a></li>
 
 	  <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook2.png" alt="facebook" 
 		style="width:20px;height:20px;"></a>
@@ -34,57 +27,50 @@
 	</div>
 
 		<div class="header">
-			<h1>ABOUT ME!</h1>
 	</div>
 	
 	</style>
 	</head>
     <div class="row">
       <div class="column1">   
-        
-     
-	
-      <h3>Hi there!</h3>
-	  <p>I am <b>Nathaniel Masotes</b>, currently studying at <b>Asia Pacific College</b>, 2nd year <b>BSIT student</b>. <br><br>
-	  <br>I have different hobbies from playing instruments like piano and guitar, <br> 
-	  watching sports  reading books, and video games depending on my mood on which I feel I want to do.
-
-	  <br>
-	  <br>
-	  Honestly, I am very introvert person, but i am just trying to be <b>ME</b>.
-	  <br>
-	  <br>
-      </p>
+      <h1>Hi there, <br>I'm Nathaniel Masotes</h1>
+	  <p>I am currently studying &#128304 at 
+	  Asia Pacific College &#127970, 2nd year BSIT student &#128187.
+	  I have different hobbies from playing instruments like piano &#127929 and guitar &#127928, 
+	  sports&#127936&#127955, reading novels &#128218, and competitive video games &#127918 depending on my mood&#128528 on 
+	  which I feel I want to do. Currently, I am focusing in further developing &#128200 this website. If you wish to give suggestion(s), 
+	  please do contact &#128241 me through my given social media accounts.</p>
 		</div>
 		<div class="pfp">
-			<img src="pfp.jpg" 
-			alt="profile pic" width="400" height="300"  style="width: 400px; 
-			margin-left: 20px; position: relative; border-radius: 5%;" >
+			<img src="pfp.gif" 
+			alt="profile pic" width="400" height="300"  style="width: 250px; 
+			margin-left: 50px; position: relative; border-radius: 5%;" >
 		</div> 
 	<br>
-		<div class="header">
-			<br>
-			<br>
-			<h2>MY Portfolio</h2>
-		</div>
-	</div>
-
-	<div class="projects">
-		<img src="RAMS Portal mobile ver.  INMEDIA (1).gif" 
-		alt="rams portal" width="100px" height="400px"  style="width: 200px; 
-		margin-left: 200px; position: relative; border-radius: 2%; margin-top: 1px;" >
-		<img src="proj2.png" 
-		alt="pnr demo" width="1000px" height="250px"  style="width: 500px; 
-		margin-left: 200px; position: relative; border-radius: 2%; margin-top: 10px;" >
-	</div>
+	<br>
+	<br>
+	<br>
+	<div class="row">
+		<div class="column2">   
+		<h1>My <br>Portfolio</h1>
+		<p>Here are the past projects that I worked from. I did enjoy designing </p>
+		  </div>
+		  <div class="projects">
+			  <img src="RAMS Portal mobile ver.  INMEDIA (1).gif" 
+			  alt="profile pic" width="400" height="300"  style="width: 200px; 
+			  margin-left: 200px; position: relative; border-radius: 2%;">
+			  <img src="proj2.png" 
+			  alt="pnr demo" width="1000px" height="250px"  style="width: 500px; 
+			  margin-left: 200px; position: relative; border-radius: 2%; margin-top: 1px;">
+		  </div> 
 
 	<br> 
 
 
 
-	<h2>© NATHANIEL MASOTES 2022</h2>
 
 
 
+	</main>
 </body>
 </html>
