--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+</script>
+</head>
 <body>
 
-<h2>What Can JavaScript Do?</h2>
+<h2>Demo JavaScript in Head</h2>
 
-<p>JavaScript can change HTML attribute values.</p>
+<p id="demo">A Paragraph.</p>
 
-<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
-
-<button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
-
-<img id="myImage" src="pic_bulboff.gif" style="width:100px">
-
-<button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+<button type="button" onclick="myFunction()">Try it</button>
 
 </body>
-</html>
+</html> 
