--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script>
-function myFunction() {
-  document.getElementById("demo").innerHTML = "Paragraph changed.";
-}
-</script>
-</head>
 <body>
 
-<h2>Demo JavaScript in Head</h2>
+<h2>My First Web Page</h2>
+<p>My First Paragraph.</p>
 
-<p id="demo">A Paragraph.</p>
+<p id="demo"></p>
 
-<button type="button" onclick="myFunction()">Try it</button>
+<script>
+document.getElementById("demo").innerHTML = 5 + 6;
+</script>
 
 </body>
 </html> 
