JavaScript Lesson 1.6 - Syntax

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,20 +2,14 @@
 <html>
 <body>
 
-<h2>JavaScript Statements</h2>
+<h2>JavaScript Numbers</h2>
 
-<p>A <b>JavaScript program</b> is a list of <b>statements</b> to be executed by a computer.</p>
+<p>Number can be written with or without decimals.</p>
 
 <p id="demo"></p>
 
 <script>
-let x, y, z;  // Statement 1
-x = 5;        // Statement 2
-y = 6;        // Statement 3
-z = x + y;    // Statement 4
-
-document.getElementById("demo").innerHTML =
-"The value of z is " + z + ".";  
+document.getElementById("demo").innerHTML = 10.50;
 </script>
 
 </body>
