--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,14 +2,17 @@
 <html>
 <body>
 
-<h2>JavaScript Numbers</h2>
-
-<p>Number can be written with or without decimals.</p>
-
-<p id="demo"></p>
+<h1 id="myH"></h1>
+<p id="myP"></p>
 
 <script>
-document.getElementById("demo").innerHTML = 10.50;
+/*
+The code below will change
+the heading with id = "myH"
+and the paragraph with id = "myP"
+*/
+document.getElementById("myH").innerHTML = "JavaScript Comments";
+document.getElementById("myP").innerHTML = "My first paragraph.";
 </script>
 
 </body>
