--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,18 +2,21 @@
 <html>
 <body>
 
-<h1 id="myH"></h1>
-<p id="myP"></p>
+<h2>JavaScript Variables</h2>
+
+<p>In this example, x, y, and z are variables.</p>
+
+<p id="demo"></p>
 
 <script>
-/*
-The code below will change
-the heading with id = "myH"
-and the paragraph with id = "myP"
-*/
-document.getElementById("myH").innerHTML = "JavaScript Comments";
-document.getElementById("myP").innerHTML = "My first paragraph.";
+let x = 5;
+let y = 6;
+let z = x + y;
+document.getElementById("demo").innerHTML =
+"The value of z is: " + z;
 </script>
 
 </body>
 </html>
+
+
