--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,21 +2,24 @@
 <html>
 <body>
 
-<h2>Redeclaring a Variable Using var</h2>
+<h2>JavaScript const</h2>
+
+<p>Declaring a constant object does NOT make the objects properties unchangeable:</p>
 
 <p id="demo"></p>
 
 <script>
-var  x = 10;
-// Here x is 10
+// Create an object:
+const car = {type:"Fiat", model:"500", color:"white"};
 
-{  
-var x = 2;
-// Here x is 2
-}
+// Change a property:
+car.color = "red";
 
-// Here x is 2
-document.getElementById("demo").innerHTML = x;
+// Add a property:
+car.owner = "Johnson";
+
+// Display the property:
+document.getElementById("demo").innerHTML = "Car owner is " + car.owner; 
 </script>
 
 </body>
