--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,19 +2,17 @@
 <html>
 <body>
 
-<h2>JavaScript Booleans</h2>
-<p>Booleans and Boolean objects cannot be safely compared:</p>
+<h2>JavaScript Numbers</h2>
+
+<p>JavaScript will try to convert strings to numbers when subtracting:</p>
 
 <p id="demo"></p>
 
 <script>
-// x is a boolean
-let x = false;
-
-// y is an object
-let y = new Boolean(false);
-
-document.getElementById("demo").innerHTML = typeof x + "<br>" + typeof y;
+let x = "100";
+let y = "10";
+let z = x - y;   
+document.getElementById("demo").innerHTML = z;
 </script>
 
 </body>
