--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,17 +2,19 @@
 <html>
 <body>
 
-<h2>JavaScript Numbers</h2>
+<h2>JavaScript Number Methods</h2>
 
-<p>JavaScript will try to convert strings to numbers when subtracting:</p>
+<p>The toPrecision() method returns a string, with a number written with a specified length:</p>
 
 <p id="demo"></p>
 
 <script>
-let x = "100";
-let y = "10";
-let z = x - y;   
-document.getElementById("demo").innerHTML = z;
+let x = 9.656;
+document.getElementById("demo").innerHTML = 
+  x.toPrecision() + "<br>" +
+  x.toPrecision(2) + "<br>" +
+  x.toPrecision(4) + "<br>" +
+  x.toPrecision(6);  
 </script>
 
 </body>
