--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,19 +2,15 @@
 <html>
 <body>
 
-<h2>JavaScript Number Methods</h2>
-
-<p>The toPrecision() method returns a string, with a number written with a specified length:</p>
+<h1>JavaScript Arithmetic</h1>
+<h2>The += Operator</h2>
 
 <p id="demo"></p>
 
 <script>
-let x = 9.656;
-document.getElementById("demo").innerHTML = 
-  x.toPrecision() + "<br>" +
-  x.toPrecision(2) + "<br>" +
-  x.toPrecision(4) + "<br>" +
-  x.toPrecision(6);  
+var x = 10;
+x += 5;
+document.getElementById("demo").innerHTML = x;
 </script>
 
 </body>
