JavaScript Lesson 5.2 - Assignment

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,15 +2,15 @@
 <html>
 <body>
 
-<h1>JavaScript Arithmetic</h1>
-<h2>The += Operator</h2>
+<h1>JavaScript Assignments</h1>
+<h2>Simple Assignment</h2>
+<h3>The = Operator</h3>
 
 <p id="demo"></p>
 
 <script>
-var x = 10;
-x += 5;
-document.getElementById("demo").innerHTML = x;
+let x = 10;
+document.getElementById("demo").innerHTML = "Value of x is: " + x;
 </script>
 
 </body>
