--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,15 +2,16 @@
 <html>
 <body>
 
-<h1>JavaScript Assignments</h1>
-<h2>Simple Assignment</h2>
-<h3>The = Operator</h3>
+<h1>JavaScript Arithmetic</h1>
+<h2>Arithmetic Operations</h2>
+<p>A typical arithmetic operation takes two numbers (or expressions) and produces a new number.</p>
 
 <p id="demo"></p>
 
 <script>
-let x = 10;
-document.getElementById("demo").innerHTML = "Value of x is: " + x;
+let a = 3;
+let x = (100 + 50) * a;
+document.getElementById("demo").innerHTML = x;
 </script>
 
 </body>
