JavaScript Lesson 5.4 - Math

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,16 +2,20 @@
 <html>
 <body>
 
-<h1>JavaScript Arithmetic</h1>
-<h2>Arithmetic Operations</h2>
-<p>A typical arithmetic operation takes two numbers (or expressions) and produces a new number.</p>
+<h2>JavaScript Math Constants</h2>
 
 <p id="demo"></p>
 
 <script>
-let a = 3;
-let x = (100 + 50) * a;
-document.getElementById("demo").innerHTML = x;
+document.getElementById("demo").innerHTML = 
+"<p><b>Math.E:</b> " + Math.E + "</p>" +
+"<p><b>Math.PI:</b> " + Math.PI + "</p>" +
+"<p><b>Math.SQRT2:</b> " + Math.SQRT2 + "</p>" +
+"<p><b>Math.SQRT1_2:</b> " + Math.SQRT1_2 + "</p>" +
+"<p><b>Math.LN2:</b> " + Math.LN2 + "</p>" +
+"<p><b>Math.LN10:</b> " + Math.LN10 + "</p>" +
+"<p><b>Math.LOG2E:</b> " + Math.LOG2E + "</p>" +
+"<p><b>Math.Log10E:</b> " + Math.LOG10E + "</p>";
 </script>
 
 </body>
