JavaScript Lesson 6.2 - String Method

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -3,19 +3,16 @@
 <body>
 
 <h1>JavaScript Strings</h1>
-<p>Strings are written inside quotes. You can use single or double quotes:</p>
+<h2>The length Property</h2>
 
+<p>The length of the string is:</p>
 <p id="demo"></p>
 
 <script>
-let carName1 = "Volvo XC60"; // Double quotes
-let carName2 = 'Volvo XC60'; // Single quotes
-
-document.getElementById("demo").innerHTML =
-carName1 + " " + carName2; 
+let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+document.getElementById("demo").innerHTML = text.length;
 </script>
 
 </body>
 </html>
-
 
