JavaScript Lesso 6.3 - String Search

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -3,16 +3,15 @@
 <body>
 
 <h1>JavaScript Strings</h1>
-<h2>The length Property</h2>
+<h2>The indexOf() Method</h2>
 
-<p>The length of the string is:</p>
+<p>The position of the first occurrence of "locate" is:</p>
 <p id="demo"></p>
 
 <script>
-let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-document.getElementById("demo").innerHTML = text.length;
+let text = "Please locate where 'locate' occurs!";
+document.getElementById("demo").innerHTML = text.indexOf("locate");
 </script>
 
 </body>
 </html>
-
