--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,15 +2,23 @@
 <html>
 <body>
 
-<h1>JavaScript Strings</h1>
-<h2>The indexOf() Method</h2>
+<h2>JavaScript Template Literals</h2>
 
-<p>The position of the first occurrence of "locate" is:</p>
+<p>Template literals allows multiline strings:</p>
+
 <p id="demo"></p>
 
+<p>Template literals are not supported in Internet Explorer.</p>
+
 <script>
-let text = "Please locate where 'locate' occurs!";
-document.getElementById("demo").innerHTML = text.indexOf("locate");
+let text =
+
+`The quick
+brown fox
+jumps over
+the lazy dog`;
+
+document.getElementById("demo").innerHTML = text;
 </script>
 
 </body>
