--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,24 +2,15 @@
 <html>
 <body>
 
-<h2>JavaScript Template Literals</h2>
-
-<p>Template literals allows multiline strings:</p>
+<h2>JavaScript Arrays</h2>
 
 <p id="demo"></p>
 
-<p>Template literals are not supported in Internet Explorer.</p>
-
 <script>
-let text =
-
-`The quick
-brown fox
-jumps over
-the lazy dog`;
-
-document.getElementById("demo").innerHTML = text;
+const cars = ["Saab", "Volvo", "BMW"];
+document.getElementById("demo").innerHTML = cars;
 </script>
 
 </body>
 </html>
+
