--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,15 +2,16 @@
 <html>
 <body>
 
-<h2>JavaScript Arrays</h2>
+<h2>JavaScript Array Methods</h2> 
+<h2>toString()</h2>
+<p>The toString() method returns an array as a comma separated string:</p>
 
 <p id="demo"></p>
 
 <script>
-const cars = ["Saab", "Volvo", "BMW"];
-document.getElementById("demo").innerHTML = cars;
+const fruits = ["Banana", "Orange", "Apple", "Mango"];
+document.getElementById("demo").innerHTML = fruits.toString();
 </script>
 
 </body>
 </html>
-
