--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,15 +2,18 @@
 <html>
 <body>
 
-<h2>JavaScript Array Methods</h2> 
-<h2>toString()</h2>
-<p>The toString() method returns an array as a comma separated string:</p>
+<h2>JavaScript Array Sort</h2>
+<p>The sort() method sorts an array alphabetically:</p>
 
-<p id="demo"></p>
+<p id="demo1"></p>
+<p id="demo2"></p>
 
 <script>
 const fruits = ["Banana", "Orange", "Apple", "Mango"];
-document.getElementById("demo").innerHTML = fruits.toString();
+document.getElementById("demo1").innerHTML = fruits;
+
+fruits.sort();
+document.getElementById("demo2").innerHTML = fruits;
 </script>
 
 </body>
