--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,18 +2,21 @@
 <html>
 <body>
 
-<h2>JavaScript Array Sort</h2>
-<p>The sort() method sorts an array alphabetically:</p>
+<h2>JavaScript Array.forEach()</h2>
+<p>Calls a function once for each array element.</p>
 
-<p id="demo1"></p>
-<p id="demo2"></p>
+<p id="demo"></p>
 
 <script>
-const fruits = ["Banana", "Orange", "Apple", "Mango"];
-document.getElementById("demo1").innerHTML = fruits;
+const numbers = [45, 4, 9, 16, 25];
 
-fruits.sort();
-document.getElementById("demo2").innerHTML = fruits;
+let txt = "";
+numbers.forEach(myFunction);
+document.getElementById("demo").innerHTML = txt;
+
+function myFunction(value, index, array) {
+  txt += value + "<br>"; 
+}
 </script>
 
 </body>
