--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,22 +2,14 @@
 <html>
 <body>
 
-<h2>JavaScript Array.forEach()</h2>
-<p>Calls a function once for each array element.</p>
-
+<h2>JavaScript const</h2>
 <p id="demo"></p>
 
 <script>
-const numbers = [45, 4, 9, 16, 25];
 
-let txt = "";
-numbers.forEach(myFunction);
-document.getElementById("demo").innerHTML = txt;
+const cars = ["Saab", "Volvo", "BMW"];
+document.getElementById("demo").innerHTML = cars;
 
-function myFunction(value, index, array) {
-  txt += value + "<br>"; 
-}
 </script>
-
 </body>
 </html>
