--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,14 +2,15 @@
 <html>
 <body>
 
-<h2>JavaScript const</h2>
+<h1>JavaScript Dates</h1>
+<h2>Using new Date()</h2>
+
 <p id="demo"></p>
 
 <script>
-
-const cars = ["Saab", "Volvo", "BMW"];
-document.getElementById("demo").innerHTML = cars;
-
+const d = new Date("2022-03-25");
+document.getElementById("demo").innerHTML = d;
 </script>
+
 </body>
 </html>
