--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,13 +2,12 @@
 <html>
 <body>
 
-<h1>JavaScript Dates</h1>
-<h2>Using new Date()</h2>
+<h2>JavaScript ISO Dates</h2>
 
 <p id="demo"></p>
 
 <script>
-const d = new Date("2022-03-25");
+const d = new Date("2015-03-25");
 document.getElementById("demo").innerHTML = d;
 </script>
 
