--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,16 +2,9 @@
 <html>
 <body>
 
-<h2>JavaScript setFullYear()</h2>
-<p>The setFullYear() method sets the year of a date object:</p>
+<button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
 
 <p id="demo"></p>
-
-<script>
-const d = new Date();
-d.setFullYear(2020);
-document.getElementById("demo").innerHTML = d;
-</script>
 
 </body>
 </html>
