JavaScript Lesson 9.2 - Precedence

--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,9 +2,15 @@
 <html>
 <body>
 
-<button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+<h1>JavaScript Arithmetic</h1>
+<h2>Operator Precedence</h2>
+<p>Multiplication has precedence over addition.</p>
 
 <p id="demo"></p>
+
+<script>
+document.getElementById("demo").innerHTML = 100 + 50 * 3;
+</script>
 
 </body>
 </html>
