--- a/week5/index(2).html
+++ b/week5/index(2).html
@@ -2,14 +2,16 @@
 <html>
 <body>
 
-<h1>JavaScript Arithmetic</h1>
-<h2>Operator Precedence</h2>
-<p>Multiplication has precedence over addition.</p>
+<h1>JavaScript Comparison</h1>
+<h2>The === Operator</h2>
+
+<p>Assign 5 to x, and display the value of the comparison (x === 5):</p>
 
 <p id="demo"></p>
 
 <script>
-document.getElementById("demo").innerHTML = 100 + 50 * 3;
+let x = 5;
+document.getElementById("demo").innerHTML = (x === 5);
 </script>
 
 </body>
