My Personal Website v.8

--- a/week5/index.html
+++ b/week5/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="mystyle.css">
-	<link rel="shortcut icon" type="image/png" href="img/NHM.png">
+	<link rel="shortcut icon" type="image/png" href="nhm (3).png">
     <title>nrmasotes</title>
 </head>
 <body>
@@ -46,29 +46,6 @@
 			alt="profile pic" width="400" height="300"  style="width: 250px; 
 			margin-left: 50px; position: relative; border-radius: 5%;" >
 		</div> 
-	<br>
-	<br>
-	<br>
-	<br>
-	<div class="row">
-		<div class="column2">   
-		<h1>My <br>Portfolio</h1>
-		<p>Here are the past projects that I worked from. I did enjoy designing </p>
-		  </div>
-		  <div class="projects">
-			  <img src="RAMS Portal mobile ver.  INMEDIA (1).gif" 
-			  alt="profile pic" width="400" height="300"  style="width: 200px; 
-			  margin-left: 200px; position: relative; border-radius: 2%;">
-			  <img src="proj2.png" 
-			  alt="pnr demo" width="1000px" height="250px"  style="width: 500px; 
-			  margin-left: 200px; position: relative; border-radius: 2%; margin-top: 1px;">
-		  </div> 
-
-	<br> 
-
-
-
-
 
 
 	</main>
