My Personal Website v.9

--- a/week5/resource.html
+++ b/week5/resource.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stlesheet" href="htpp://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">
+        <link rel="stlesheet" href="https://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">
     </head>
     <body>
         <h1>Resources used to create <a href="http://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">personal profile page</a></h1>
