My Personal Website v.9

--- a/week5/index.html
+++ b/week5/index.html
@@ -39,7 +39,9 @@
 	  I have different hobbies from playing instruments like piano &#127929 and guitar &#127928, 
 	  sports&#127936&#127955, reading novels &#128218, and competitive video games &#127918 depending on my mood&#128528 on 
 	  which I feel I want to do. Currently, I am focusing in further developing &#128200 this website. If you wish to give suggestion(s), 
-	  please do contact &#128241 me through my given social media accounts.</p>
+	  please do contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
+	  be reminded that I cannot answer it on time. Please be guided with my local time. (click to reveal) <button onclick="this.innerHTML=Date()">My local time is...</button></p>
+		
 		</div>
 		<div class="pfp">
 			<img src="pfp.gif" 
