--- a/week5/resource.html
+++ b/week5/resource.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stlesheet" href="https://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">
+        <link rel="stylesheet" href="https://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">
     </head>
     <body>
         <h1>Resources used to create <a href="http://apcwebprog.csf.ph/~nrmasotes/lab2/week5/">personal profile page</a></h1>
@@ -11,6 +11,11 @@
                 <li><a href="https://www.w3schools.com/html/html_css.asp">W3 schools - HTML CSS</a></a></li>
                 <li><a href="https://www.w3schools.com/html/html_favicon.asp">W3 schools - HTML Favicon</a></a></li>
                 <li><a href="https://www.w3schools.com/html/html_paragraphs.asp">W3 schools - HTML Paragraphs</a></a></li>
+                <li><a href="https://www.w3schools.com/js/js_popup.asp">W3 schools - JavaScript Popup</a></a></li>
+                <li><a href="https://www.w3schools.com/js/js_dates.asp">W3 schools - JavaScript Calendar</a></a></li>
+                <li><a href="https://www.w3schools.com/js/js_comments.asp">W3 schools - JavaScript Comment</a></a></li>
+                <li><a href="https://www.w3schools.com/js/js_syntax.asp">W3 schools - JavaScript Syntax</a></a></li>
+                <li><a href="https://www.w3schools.com/js/js_booleans.asp">W3 schools - JavaScript Boolean</a></a></li>
             </ul>
     </body>
 </html>
