My Personal Website v.11

--- a/week5/index.html
+++ b/week5/index.html
@@ -3,25 +3,22 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="mystyle.css">
-	<link rel="javascript" href="jees.js">
-	<link rel="shortcut icon" type="image/png" href="nhm (3).png">
+	<link rel="shortcut icon" type="image/png" href="nm.png">
+	<script src="https://kit.fontawesome.com/9f49c4b2c4.js" crossorigin="anonymous"></script>
     <title>nrmasotes</title>
 </head>
 <body>
 	<main>
 	<div class="topnav">
 	  <a class="active" href="#Aboutme">About Me</a>
-	  <a href="#MyPortfolio">My Portfolio</a>
+	  <a href="#myportfolio">My Portfolio</a>
 	  <a href="resource.html">Resources</a>
 	  <li style="float:right"><a  href="#Home">
-		<img src="nhm (3).png" width="25px" height="25px" overflow="hidden" margin-top="-6px" margin-right="10px"></a></li>
+		<img src="nm.png" width="25px" height="25px" overflow="hidden" margin-top="-6px" margin-right="10px"></a></li>
 
-	  <a href="https://www.facebook.com/nathaniel.masotes11/"><img src="facebook2.png" alt="facebook" 
-		style="width:20px;height:20px;"></a>
-	  <a href="https://github.com/nrmasotes"><img src="githubby3.png" alt="facebook" 
-		style="width:20px;height:20px;"></a>
-	  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><img src="linkedin2.png" alt="linkedin" 
-		style="width:20px;height:20px;"></a>
+	  <a href="https://www.facebook.com/nathaniel.masotes11/"><i class="fa-brands fa-facebook"></a></i>
+	  <a href="https://github.com/nrmasotes"><i class="fa-brands fa-github"></i></a>
+	  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><i class="fa-brands fa-linkedin"></i></a>
 	</div>
 
 	<div style="padding-left:16px">
@@ -48,22 +45,7 @@
 
 	<p id="demo"></p>
 
-	<script>
-		// W3 school - JS Confirm Box
-		// W3 school - JS Popup Box
-
-	function myFunction() {
-	let text;
-	let person = prompt("Please enter your full name, my friendly visitor:", "Harry Potter");
-	var txt;
-	if (confirm("You've been hacked, " + person + "!")) {
-		txt = " Oh! so you just given up, " + person + "?" + " Just kidding its just a prank.";
-	} else {
-		txt = person + ", you cant accept defeat?" + " Just kidding its just a prank.";
-	}
-	document.getElementById("demo").innerHTML = txt;
-	}
-</script>
+	<script src="myscript.js"></script>
 		</div>
 		<div class="pfp">
 			<img src="pfp.gif" 
@@ -71,6 +53,30 @@
 			margin-left: 50px; position: relative; border-radius: 5%;" >
 		</div> 
 
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div class="row">
+			<div id="myportfolio">   
+			<h1>My <br>Portfolio</h1>
+			<p>Here are the past projects that I worked together with my groupmates from my previous subjects. I did enjoy (including hard times) designing wireframes and a Python application</p>
+			  </div>
+			  <div class="projects">
+				  <img src="RAMS Portal mobile ver.  INMEDIA (1).gif" 
+				  alt="profile pic" width="400" height="300"  style="width: 200px; 
+				  margin-left: 200px; position: relative; border-radius: 2%;">
+				  <img src="proj2.png" 
+				  alt="pnr demo" width="1000px" height="250px"  style="width: 500px; 
+				  margin-left: 200px; position: relative; border-radius: 2%; margin-top: 1px;">
+			  </div> 
+		<div class="footer">
+				<h3>&copy; Nathaniel Masotes  2023</h3>
+		</div>
 
 	</main>
 </body>
