My Personal Website - JS Pop up Alert

--- a/week5/index.html
+++ b/week5/index.html
@@ -6,26 +6,24 @@
 	<link rel="shortcut icon" type="image/png" href="nm.png">
 	<script src="https://kit.fontawesome.com/9f49c4b2c4.js" crossorigin="anonymous"></script>
     <title>nrmasotes</title>
+
 </head>
 <body>
 	<main>
-	<div class="topnav">
-	  <a class="active" href="#Aboutme">About Me</a>
-	  <a href="#myportfolio">My Portfolio</a>
-	  <a href="resource.html">Resources</a>
-	  <li style="float:right"><a  href="#Home">
-		<img src="nm.png" width="25px" height="25px" overflow="hidden" margin-top="-6px" margin-right="10px"></a></li>
+		<div class="topnav">
+		<li style="float:right"><a  href="#row"></a>
+		<a class="active" href="#Aboutme">About Me</a>
+		<a href="#myportfolio">My Portfolio</a>
+		<a href="resource.html">Resources</a>
+		
+		<a href="https://www.facebook.com/nathaniel.masotes11/"><i class="fa-brands fa-facebook"></a></i>
+		<a href="https://github.com/nrmasotes"><i class="fa-brands fa-github"></i></a>
+		<a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><i class="fa-brands fa-linkedin"></i></a>
+		
+		<li style="float:left"><a  href="#row">
+			<img src="nm.png" width="25px" height="25px" overflow="hidden" margin-top="-6px" margin-right="10px"></a></li>
+	</main>
 
-	  <a href="https://www.facebook.com/nathaniel.masotes11/"><i class="fa-brands fa-facebook"></a></i>
-	  <a href="https://github.com/nrmasotes"><i class="fa-brands fa-github"></i></a>
-	  <a href="https://www.linkedin.com/in/nathaniel-hope-masotes-92971321b/"><i class="fa-brands fa-linkedin"></i></a>
-	</div>
-
-	<div style="padding-left:16px">
-	</div>
-
-		<div class="header">
-	</div>
 	
 	</style>
 	</head>
@@ -36,20 +34,17 @@
 	  Asia Pacific College &#127970, 2nd year BSIT student &#128187.
 	  I have different hobbies from playing instruments like piano &#127929 and guitar &#127928, 
 	  sports&#127936&#127955, reading novels &#128218, and competitive video games &#127918 depending on my mood&#128528 on 
-	  which I feel I want to do. Currently, I am focusing in further developing &#128200 this website. If you wish to give suggestion(s), 
-	  please do contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
-	  be reminded that I cannot answer it on time. Please be guided with my local time. (click to reveal) 
+	  which I feel I want to do. Currently, I am focusing in further developing &#128200 this website. </p>
+	  <p>If you wish to give suggestion(s), 
+	you can contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
+	  be reminded that I cannot answer it on time, please consider checking my local time. 
 	  </p>
-	  <button onclick="this.innerHTML=Date()">My local time is...</button> 
-	  <button onclick="myFunction()">Please click this button if you are visiting this website.</button>
 
 	<p id="demo"></p>
-
-	<script src="myscript.js"></script>
 		</div>
 		<div class="pfp">
 			<img src="pfp.gif" 
-			alt="profile pic" width="400" height="300"  style="width: 250px; 
+			alt="profile pic" width="400" height="350"  style="width: 250px; 
 			margin-left: 50px; position: relative; border-radius: 5%;" >
 		</div> 
 
@@ -59,13 +54,13 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
 		<div class="row">
 			<div id="myportfolio">   
-			<h1>My <br>Portfolio</h1>
+			<h1>My Portfolio</h1>
 			<p>Here are the past projects that I worked together with my groupmates from my previous subjects. I did enjoy (including hard times) designing wireframes and a Python application</p>
-			  </div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+				in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
 			  <div class="projects">
 				  <img src="RAMS Portal mobile ver.  INMEDIA (1).gif" 
 				  alt="profile pic" width="400" height="300"  style="width: 200px; 
@@ -73,11 +68,12 @@
 				  <img src="proj2.png" 
 				  alt="pnr demo" width="1000px" height="250px"  style="width: 500px; 
 				  margin-left: 200px; position: relative; border-radius: 2%; margin-top: 1px;">
-			  </div> 
+			  </div>
+		<br>
+		<br>
 		<div class="footer">
 				<h3>&copy; Nathaniel Masotes  2023</h3>
 		</div>
-
-	</main>
+<script src="myscript.js"></script>
 </body>
 </html>
