My Personal Website - JS Functions

--- a/week5/index.html
+++ b/week5/index.html
@@ -38,7 +38,11 @@
 	  <p>If you wish to give suggestion(s), 
 	you can contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
 	  be reminded that I cannot answer it on time, please consider checking my local time. 
-	  </p>
+	  <button onclick="this.innerHTML=Date()">Click to see my local time. &#128355</button> </p>
+	  
+	  <br>
+	  <br>
+	  <button onclick="myFunction()">Click to see the surprise. &#128514</button>
 
 	<p id="demo"></p>
 		</div>
